2000-04-06   Karl Kraft <karl@nfox.com>
	* Added two checks for non-nil key before calling removeObjectForKey:

2000-03-31  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWResourceManager.m: Added Debug Error Traces
	* GSWConstants.m: change frameworks extensions in debug mode
	* GSWeb.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
	* GSWExtensions.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
	* GSWExtensionsGSW.framework/GNUmakefile: changed GSWBUNDLE_EXTENSION for debug/non debug
	
2000-03-23  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWAdaptor/common/config.h: changed GSWAPP_EXTENSION from wa to woa.

2000-03-20  Manuel Guesdon <mguesdon@sbuilders.com>

	* GSWDebug.h: remove unused functions
	* GSWApplication.h/.m:Added:
		GSWDebuggingStatus category
		+isStatusDebuggingEnabled
		+setStatusDebuggingEnabled:
		+debugSetConfigFilePath
		+setDebugSetConfigFilePath:
	* GSWApplication.h/.m:	replaced GSWDebugStdLog by [GSWApp statusDebug...]
		replaced executeWithClasses: with executeWithClassArray:
		corrections for different warnings
		change in GSWApplicationDebugSetChange() to use GSWDebugSetConfigFilePath option
	* GSWConfig.h: added GSWOPTVALUE_StatusDebuggingEnabled
	* GSWConstants.h/.m: added GSWOPT_StatusDebuggingEnabled
		added GSWOPT_DebugSetConfigFilePath
	* INSTALL: reflect changes of adaptors,...
	* GSWUtil.h/.m: corrections for different warnings
		removed MD5HexDigest()
	* GSWCheckBoxListm: replaced LOGAssertGood by GSWLogAssertGood
	* GSWRadioButtonList.m: replaced LOGAssertGood by GSWLogAssertGood
	* GSWDefaultAdaptorThread.m: replaced GSWLogCStdOut by +statusLogWithFormat:
		corrections for different warnings
	* GSWDefaultAdaptor.m: replaced GSWLogCStdOut by +statusLogWithFormat:
	* GSWSessionTimeOutManager.m: replaced GSWLogCStdOut by +statusLogWithFormat:
	* GSWKeyValueAssociation.m: replaced LOGAssertGood by GSWLogAssertGood